--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -43,13 +43,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:gravity="center"
                 android:layout_centerInParent="true"
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/tvlocation"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:text="@string/currentlocation"
                     android:drawableLeft="@drawable/ic_location"
                     android:drawablePadding="5dp"
@@ -59,18 +60,21 @@
                     android:visibility="visible" />
                 <TextView
                     android:id="@+id/tvHeaderText"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
+                    android:layout_gravity="center"
                     android:text=""
+                    android:singleLine="true"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     android:visibility="visible" />
             </LinearLayout>
 
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/userProf"
                 android:layout_width="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:src="@drawable/circleimage"
@@ -81,14 +85,15 @@
         </RelativeLayout>
 
 
-        <androidx.appcompat.widget.SearchView
+        <SearchView
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#ffffff"
             android:layout_marginTop="10dp"
-            app:queryHint="@string/search"
-            android:iconifiedByDefault="false" />
+            android:background="#ffffff"
+            android:iconifiedByDefault="false"
+            android:queryHint="@string/search"
+            app:queryHint="@string/search" />
 
     </LinearLayout>
 
