--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -50,7 +50,7 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
                 android:inputType="number"
-                android:hint="+971 xxxxxxxxxx"
+                android:hint="xxxxxxxxxx"
                 android:layout_marginTop="8dp"
                 android:layout_height="wrap_content" >
         </EditText>
