--- a/app/src/main/res/layout/otpverification_activity.xml
+++ b/app/src/main/res/layout/otpverification_activity.xml
@@ -47,8 +47,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:textColor="@color/black"
                 app:hide_otp="true"
+                android:textColor="#171717"
+                app:bar_active_color="@color/black"
                 app:bar_enabled="true"
                 app:bar_error_color="@color/red"
                 android:layout_marginRight="25dp"
