--- a/app/src/main/res/drawable-v24/button_rezq.xml
+++ b/app/src/main/res/drawable-v24/button_rezq.xml
@@ -4,7 +4,7 @@
     <solid
         android:color="#1B9090" />
     <corners
-        android:radius="@dimen/_5sdp"/>
+        android:radius="8dp"/>
 
 
     <stroke
