--- a/app/src/main/res/layout/activity_category_recyclerview_data.xml
+++ b/app/src/main/res/layout/activity_category_recyclerview_data.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    android:padding="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_3sdp"
+        android:layout_margin="3dp"
         android:background="@color/white"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp">
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/food"
+                android:textAllCaps="true"
                 android:textColor="@color/black"
                 android:textSize="15dp" />
 
