--- a/app/src/main/res/layout/copy_offers_coupon.xml
+++ b/app/src/main/res/layout/copy_offers_coupon.xml
@@ -69,6 +69,7 @@
             android:orientation="vertical"
             android:layout_marginTop="25dp">
             <LinearLayout
+                android:id="@+id/Linearupgrade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -125,6 +126,7 @@
                     android:layout_height="wrap_content" />
         </LinearLayout>
             <LinearLayout
+                android:id="@+id/LinearCopycopon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
