--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -31,7 +31,7 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/lang_arabic"
+                android:id="@+id/Tvlang_arabic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_language"/>
             <TextView
-                android:id="@+id/lang_english"
+                android:id="@+id/Tvlang_english"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FF3B3B"
