--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,12 +58,12 @@
             <Button
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="48dp"
                 android:layout_below="@id/etNumber"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="25dp"
-                android:backgroundTint="#1B9090"
+                android:background="@drawable/button_rezq"
                 android:textColor="@color/white"
                 android:text="@string/login"
                 android:textSize="14dp" />
