--- a/app/src/main/res/layout/all_locked_offer_alert.xml
+++ b/app/src/main/res/layout/all_locked_offer_alert.xml
@@ -49,6 +49,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_height="wrap_content">
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerRezqplus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -77,6 +78,7 @@
                     android:textColor="@color/red"
                     android:textSize="14dp" />
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerPrimeOffer"
                     android:layout_below="@id/primeOffer"
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
@@ -95,7 +97,7 @@
                 android:layout_below="@+id/rr"
                 android:layout_alignParentBottom="true">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="163dp"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
                     android:gravity="center"
@@ -104,17 +106,17 @@
                     android:text="@string/prime_members"/>
                 <Button
                     android:id="@+id/btnReedem"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="91dp"
+                    android:layout_height="26dp"
                     android:gravity="center"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="40dp"
                     android:text="@string/upgrade"
+                    android:textAllCaps="true"
                     android:background="@drawable/off_border"
                     android:textColor="@color/red"
-                    android:textSize="12dp"
-                    />
+                    android:textSize="12dp" />
 
             </RelativeLayout>
 
