--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -11,6 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+
             android:background="#F5F5F5">
 
             <ScrollView
@@ -30,7 +31,6 @@
                     android:orientation="vertical">
 
                     <FrameLayout
-                        android:background="@drawable/slider_border"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_150sdp"
                         android:layout_marginTop="@dimen/_8sdp"
@@ -282,12 +282,126 @@
                             android:text="@string/seeall" />
 
                     </LinearLayout>
-                    <androidx.recyclerview.widget.RecyclerView
+                   <!-- <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:id="@+id/Rvtrending"
                         android:layout_height="wrap_content">
 
-                    </androidx.recyclerview.widget.RecyclerView>
+                    </androidx.recyclerview.widget.RecyclerView>-->
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp">
+                        <androidx.cardview.widget.CardView
+                            android:layout_height="170dp"
+                            android:id="@+id/cardItem"
+                            android:layout_marginLeft="15dp"
+                            app:cardCornerRadius="8dp"
+                            android:layout_width="158dp">
+
+                            <ImageView
+                                android:layout_width="158dp"
+                                android:layout_height="170dp"
+                                android:src="@drawable/pexels_paris" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:textColor="#FFFFFF"
+                                android:layout_marginTop="@dimen/_60sdp"
+                                android:textStyle="bold"
+                                android:textSize="12dp"
+                                android:text="@string/marina"/>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="#39C3C3"
+                                android:textStyle="bold"
+                                android:textSize="12dp"
+                                android:gravity="center"
+                                android:layout_gravity="bottom"
+                                android:layout_marginBottom="20dp"
+                                android:text="@string/off_percent"/>
+
+
+                        </androidx.cardview.widget.CardView>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_toRightOf="@+id/cardItem"
+                            android:layout_marginLeft="20dp"
+                            android:orientation="vertical"
+                            android:layout_height="wrap_content">
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/cardItem2"
+                                android:layout_height="80dp"
+                                app:cardCornerRadius="10dp"
+                                android:layout_width="150dp">
+
+                                <ImageView
+                                    android:layout_width="158dp"
+                                    android:layout_height="80dp"
+                                    android:src="@drawable/quark_studio" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:textColor="#FFFFFF"
+                                    android:textStyle="bold"
+                                    android:textSize="12dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:text="@string/dubai_mall"/>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="#39C3C3"
+                                    android:textStyle="bold"
+                                    android:textSize="12dp"
+                                    android:gravity="center"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_gravity="bottom"
+                                    android:text="@string/off_percent"/>
+
+
+                            </androidx.cardview.widget.CardView>
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/cardItem3"
+                                android:layout_height="80dp"
+                                app:cardCornerRadius="10dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_width="150dp">
+
+                                <ImageView
+                                    android:layout_width="158dp"
+                                    android:layout_height="80dp"
+                                    android:src="@drawable/quark_studio" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:textColor="#FFFFFF"
+                                    android:textStyle="bold"
+                                    android:textSize="12dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:text="@string/al_qaim"/>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="#39C3C3"
+                                    android:textStyle="bold"
+                                    android:textSize="12dp"
+                                    android:gravity="center"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_gravity="bottom"
+                                    android:text="@string/drink_on"/>
+
+
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+                    </RelativeLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:orientation="vertical"
@@ -330,10 +444,11 @@
                         android:layout_height="100dp"
                         android:background="@drawable/ic_group_getextra">
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="211dp"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:textSize="18dp"
+                            android:gravity="center"
                             android:textColor="@color/white"
                             android:textStyle="bold"
                             android:text="@string/get_extra"/>
