--- a/app/src/main/res/layout/nav_header_main1.xml
+++ b/app/src/main/res/layout/nav_header_main1.xml
@@ -22,10 +22,11 @@
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="30dp">
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/profile_image"
                 android:layout_width="80dp"
-                android:src="@drawable/circleimage"
+                app:shapeAppearanceOverlay="@style/roundedCornersImageView"
+                android:src="@drawable/rectangle_image"
                 android:layout_height="@dimen/_80sdp" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,40 +43,54 @@
                     android:singleLine="true"
                     android:textSize="15dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-                <TextView
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/tvmember"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/freemember"
-                    android:textColor="#8D8D8D"
-                    android:textStyle="bold"
-                    android:singleLine="true"
-                    android:textSize="12dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+                    android:layout_marginTop="8dp"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tvmember"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/freemember"
+                        android:textColor="#8D8D8D"
+                        android:visibility="gone"
+                        android:textStyle="bold"
+                        android:singleLine="true"
+                        android:textSize="12dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+                    <TextView
+                        android:id="@+id/TvseeProfile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="8dp"
+                        android:background="@drawable/ic_baseline_arrow_forward_ios_24"
+                        android:layout_alignParentRight="true"/>
+                </RelativeLayout>
+
                 <Button
-                    android:visibility="gone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="32dp"
                     android:text="@string/rezq_mem"
                     android:textColor="@color/white"
                     android:textSize="12dp"
                     android:layout_margin="5dp"
                     android:background="@drawable/button_rezq"/>
                 <TextView
-                    android:visibility="gone"
+                    android:layout_marginTop="5dp"
                     android:layout_width="wrap_content"
                     android:textSize="12dp"
+                    android:layout_marginLeft="10dp"
                     android:textColor="#171717"
                     android:layout_height="wrap_content"
                     android:text="@string/from_to"/>
                 <com.sa.rezq.customecomponent.CustomButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_width="90dp"
+                    android:layout_height="32dp"
                     android:background="@drawable/button_border"
                     android:textColor="#FFFFFF"
                     android:textSize="12dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:text="@string/upgrade"/>
 
