--- a/app/src/main/res/layout/otpverification_activity.xml
+++ b/app/src/main/res/layout/otpverification_activity.xml
@@ -65,11 +65,11 @@
             android:id="@+id/btnLogin"
             android:layout_below="@id/etNumber"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="48dp"
             android:layout_marginTop="50dp"
             android:textSize="14dp"
-            android:backgroundTint="#1B9090"
             android:layout_marginRight="25dp"
+            android:background="@drawable/button_rezq"
             android:textColor="@color/white"
             android:layout_marginLeft="25dp"
             android:text="@string/verify"/>
