--- a/app/src/main/res/layout/popular_places_recyclerview_data.xml
+++ b/app/src/main/res/layout/popular_places_recyclerview_data.xml
@@ -28,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/pizza"/>
             <TextView
+                android:id="@+id/tvPercentOff"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
