--- a/app/src/main/res/layout/recent_coupon_dataview.xml
+++ b/app/src/main/res/layout/recent_coupon_dataview.xml
@@ -2,17 +2,15 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/lockedOffer"
-    android:layout_margin="10dp">
+    android:layout_marginTop="8dp"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tvHappyhr"
         android:layout_width="52dp"
-        android:textColor="#747474"
+        android:textColor="#FFFFFF"
         android:gravity="center"
         android:text="@string/happy_hourse"
-        android:drawableBottom="@drawable/ic_group_lock"
-        android:background="@drawable/off_border"
+        android:background="@drawable/hours_border"
         android:layout_height="52dp" />
     <TextView
         android:id="@+id/buyone"
