--- a/app/src/main/res/layout/redeem_offer_coupon.xml
+++ b/app/src/main/res/layout/redeem_offer_coupon.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:layout_height="match_parent">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,27 +34,30 @@
                     android:textSize="16dp"
                     android:textColor="#171717"
                     android:text="@string/dubai_mall"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16dp"
-                        android:textColor="#FFB400"
                         android:drawableRight="@drawable/ic_baseline_star_rate_24"
                         android:drawablePadding="5dp"
-                        android:textStyle="bold"
-                        android:text="4.8"/>
+                        android:text="4.8"
+                        android:textColor="#FFB400"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:textSize="12dp"
+                        android:text="@string/reating"
                         android:textColor="#171717"
-                        android:text="@string/reating"/>
+                        android:textSize="12dp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -64,69 +66,62 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:layout_marginTop="25dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_marginTop="15dp"
                 android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="52dp"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/white"
+                    android:gravity="center"
+                    android:text="@string/happy_hourse"
+                    android:background="@drawable/hours_border"
+                    android:layout_height="52dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:textColor="#171717"
+                    android:gravity="center"
+                    android:textSize="16dp"
+                    android:text="@string/buy_two_get_one"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:textColor="#898989"
                     android:gravity="center"
-                    android:text="@string/unlock_raza"
+                    android:text="@string/applicable_onselectitem"
                     android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="52dp"
-                android:layout_marginTop="20dp"
-                android:textColor="#747474"
-                android:gravity="center"
-                android:text="@string/off"
-                android:drawableStart="@drawable/ic_group_lock"
-                android:background="@drawable/off_border"
-                android:layout_height="52dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textColor="#171717"
-                android:gravity="center"
-                android:text="@string/upto_50_off"
-                android:textSize="16dp"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textColor="#898989"
-                android:gravity="center"
-                android:text="@string/applicable_onselectitem"
-                android:layout_height="wrap_content" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tvRedeemOffer"
+                    android:layout_width="220dp"
                     android:layout_marginTop="25dp"
+                    android:textColor="@color/white"
+                    android:textSize="14dp"
+                    android:textStyle="bold"
+                    android:background="@drawable/button_border"
                     android:gravity="center"
-                    android:orientation="vertical"
-                    android:background="@drawable/ic_rectangle_green"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:textColor="@color/white"
-                        android:textSize="14dp"
-                        android:text="@string/premium_members_only"
-                        android:layout_height="wrap_content" />
-                    <Button
-                        android:id="@+id/btnUpgrade"
-                        android:layout_width="91dp"
-                        android:layout_marginTop="15dp"
-                        android:textColor="#FF5C5C"
-                        android:textSize="12dp"
-                        android:background="@drawable/off_border"
-                        android:text="@string/upgrade"
-                        android:layout_height="26dp" />
-                </LinearLayout>
+                    android:text="@string/reedemoffer2"
+                    android:layout_height="48dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:textColor="#FF3B3B"
+                    android:layout_marginBottom="50dp"
+                    android:textSize="14dp"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:text="@string/save_in_recent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
 
-        </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
