--- a/app/src/main/res/layout/upgrade_membership.xml
+++ b/app/src/main/res/layout/upgrade_membership.xml
@@ -21,15 +21,17 @@
         android:layout_marginTop="25dp"
         android:layout_height="wrap_content">
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="326dp"
+            android:layout_height="181dp"
             android:src="@drawable/reqq_plus"/>
     </RelativeLayout>
     <LinearLayout
+        android:id="@+id/lnrDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_margin="30dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:orientation="vertical"
         android:layout_below="@id/rezqplus">
         <TextView
@@ -164,28 +166,30 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/sub"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
+        android:layout_below="@id/lnrDesc"
+        android:layout_marginTop="20dp"
         android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tvSAR"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/sar"
+            android:textSize="24dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="#171717"
+            android:gravity="center" />
         <Button
             android:id="@+id/btnSubscribe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/subscribe"
+            android:layout_below="@id/tvSAR"
             android:textColor="@color/white"
             android:textSize="14dp"
-            android:background="@color/red"/>
+            android:background="@drawable/button_border"/>
 
     </RelativeLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sar"
-        android:layout_marginBottom="5dp"
-        android:textSize="24dp"
-        android:textColor="#171717"
-        android:gravity="center"
-        android:layout_above="@id/sub"/>
+
     </RelativeLayout>
 
 </ScrollView>
