--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
+        android:visible="false"
         android:title="@string/home" />
     <item
         android:id="@+id/nav_recentCoupon"
